[gd_scene load_steps=2 format=3 uid="uid://bnekj0rgau10x"]

[ext_resource type="Script" path="res://Scenes/Minigames/Example1/ex1_main.gd" id="1_3wqpn"]

[node name="MiniGame" type="Node2D"]
script = ExtResource("1_3wqpn")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(6.92, 6.92)
text = "mini game 1"

[node name="Score0" type="LineEdit" parent="."]
offset_left = 114.0
offset_top = 197.0
offset_right = 181.063
offset_bottom = 228.0

[node name="Score1" type="LineEdit" parent="."]
offset_left = 110.0
offset_top = 252.0
offset_right = 177.063
offset_bottom = 283.0

[node name="Score2" type="LineEdit" parent="."]
offset_left = 108.0
offset_top = 328.0
offset_right = 175.063
offset_bottom = 359.0

[node name="Score3" type="LineEdit" parent="."]
offset_left = 113.0
offset_top = 398.0
offset_right = 180.063
offset_bottom = 429.0
